# hackermode

./: .gitignore  Cargo.toml  README.md
plugins/hm/: index.js  manifest.toml
src/: app.rs  config.rs  main.rs  plugin.rs  tui.rs  ui.rs
