[package]
name = "hackermode"
version = "0.1.0"
edition = "2021"
description = "A universal CLI layer — hacker mode for everything"

[[bin]]
name = "hm"
path = "src/main.rs"

[dependencies]
ratatui     = "=0.26.3"
crossterm   = "=0.27.0"
clap        = { version = "=4.4.18", features = ["derive"] }
tokio       = { version = "=1.36.0", features = ["full"] }
serde       = { version = "=1.0.197", features = ["derive"] }
serde_json  = "=1.0.114"
toml        = "=0.8.2"
anyhow      = "=1.0.80"
dirs        = "=5.0.1"